--- a/src/kyrc.ui
+++ b/src/kyrc.ui
@@ -4,7 +4,7 @@
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkStatusIcon" id="statusicon1">
     <property name="visible">False</property>
-    <property name="title" translatable="yes">KyRC</property>
+    <property name="title" translatable="yes">Kyrc</property>
   </object>
   <object class="GtkWindow" id="window">
     <property name="visible">True</property>
