--- a/src/ui/kyrc.ui
+++ b/src/ui/kyrc.ui
@@ -8,7 +8,7 @@
     <property name="title" translatable="yes">window</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
-    <signal name="destroy" handler="main_on_destroy" swapped="no"/>
+    <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
     <child>
       <object class="GtkPaned" id="pannel">
         <property name="visible">True</property>
