Have channel subject displaying

--- a/src/ui/kyrc.ui
+++ b/src/ui/kyrc.ui
@@ -51,6 +51,7 @@
               <object class="GtkEntry" id="input">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="has_focus">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
