--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -3,17 +3,16 @@
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkWindow" id="window">
-    <property name="can_focus">False</property>
-    <property name="has_focus">True</property>
-    <property name="is_focus">True</property>
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="can_default">True</property>
     <property name="has_default">True</property>
+    <property name="receives_default">True</property>
     <property name="title" translatable="yes">Manage Servers</property>
     <property name="resizable">False</property>
-    <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">preferences-desktop</property>
-    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <property name="gravity">center</property>
