--- a/src/ui/kyrc.ui
+++ b/src/ui/kyrc.ui
@@ -6,6 +6,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">window</property>
+    <property name="window_position">center</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
     <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
@@ -51,6 +52,7 @@
               <object class="GtkEntry" id="input">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="has_focus">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
