--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -5,9 +5,8 @@
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Manage Servers</property>
-    <property name="window_position">center</property>
+    <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
-    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <child>
       <object class="GtkPaned" id="paned1">
@@ -80,6 +79,7 @@
               <object class="GtkEntry" id="host">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="has_focus">True</property>
                 <property name="margin_bottom">10</property>
               </object>
               <packing>
