--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -3,19 +3,11 @@
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkWindow" id="window">
-    <property name="visible">True</property>
-    <property name="can_focus">True</property>
-    <property name="can_default">True</property>
-    <property name="has_default">True</property>
-    <property name="receives_default">True</property>
+    <property name="can_focus">False</property>
     <property name="title" translatable="yes">Manage Servers</property>
-    <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
-    <property name="icon_name">preferences-desktop</property>
     <property name="skip_taskbar_hint">True</property>
-    <property name="skip_pager_hint">True</property>
-    <property name="gravity">center</property>
     <child>
       <object class="GtkPaned" id="paned1">
         <property name="visible">True</property>
@@ -374,7 +366,7 @@
                 <property name="valign">start</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkSwitch" id="autoconnect">
+                  <object class="GtkSwitch" id="encrypt">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="margin_top">5</property>
@@ -399,7 +391,7 @@
                 <property name="margin_bottom">5</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkSwitch" id="encrypt">
+                  <object class="GtkSwitch" id="autoconnect">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="halign">start</property>
@@ -429,3 +421,4 @@
     </child>
   </object>
 </interface>
+
