Changes to UI, logic, and bug fixing

--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -4,10 +4,15 @@
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
+    <property name="is_focus">True</property>
     <property name="title" translatable="yes">Manage Servers</property>
+    <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
+    <property name="icon_name">network-server</property>
+    <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
+    <property name="skip_pager_hint">True</property>
     <child>
       <object class="GtkPaned" id="paned1">
         <property name="visible">True</property>
@@ -421,4 +426,3 @@
     </child>
   </object>
 </interface>
-
