--- a/src/ui/relay.ui
+++ b/src/ui/relay.ui
@@ -14,7 +14,7 @@
     <property name="window_position">center</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
-    <property name="icon">kyrc.png</property>
+    <property name="icon">relay.png</property>
     <child>
       <object class="GtkPaned" id="pannel">
         <property name="visible">True</property>
