Made it so cancel is always clickable on server manager and text entry hides on welcome screen

--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -213,7 +213,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="box2">
+              <object class="GtkBox" id="cancel_wrap">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">end</property>
