--- a/src/ui/relay.ui
+++ b/src/ui/relay.ui
@@ -5,7 +5,7 @@
   <object class="GtkImage" id="network-server">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="icon_name">network-server</property>
+    <property name="pixbuf">relay.png</property>
   </object>
   <object class="GtkWindow" id="window">
     <property name="visible">True</property>
