--- a/src/ui/relay.ui
+++ b/src/ui/relay.ui
@@ -3,6 +3,8 @@
 <interface>
   <requires lib="gtk+" version="3.1"/>
   <object class="GtkWindow" id="window">
+    <property name="width_request">1111</property>
+    <property name="height_request">500</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">window</property>
