--- a/src/ui/relay.ui
+++ b/src/ui/relay.ui
@@ -8,6 +8,8 @@
     <property name="stock">gtk-properties</property>
   </object>
   <object class="GtkWindow" id="window">
+    <property name="width_request">1111</property>
+    <property name="height_request">500</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Relay</property>
