--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -3386,7 +3386,7 @@ GtkMessageDialog .titlebar.default-decoration:backdrop {
 
     box-shadow: 0 0 0 1px alpha (#000, 0.3),
                 0 12px 30px -6px alpha (#000, 0.80);
-
+    margin: 0px;
 }
 
 .window-frame.menu.csd,
