--- a/src/ui/settings_window.ui
+++ b/src/ui/settings_window.ui
@@ -30,10 +30,11 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Relay Settings</property>
-    <property name="window_position">center-on-parent</property>
+    <property name="window_position">center</property>
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">applications-system</property>
     <property name="skip_taskbar_hint">True</property>
+    <property name="gravity">center</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
