--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -109,7 +109,7 @@
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Nickanme</property>
+                <property name="label" translatable="yes">Nickname</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
