--- a/src/ui/server_window.ui
+++ b/src/ui/server_window.ui
@@ -232,9 +232,12 @@
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkListBox" id="channel">
+                  <object class="GtkScrolledWindow" id="channel_wrapper">
+                    <property name="height_request">100</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
+                    <property name="hscrollbar_policy">never</property>
+                    <property name="shadow_type">in</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
