--- a/src/ui/relay.ui
+++ b/src/ui/relay.ui
@@ -11,9 +11,11 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Relay</property>
+    <property name="window_position">center</property>
     <property name="default_width">1111</property>
     <property name="default_height">600</property>
     <property name="icon">relay.svg</property>
+    <property name="gravity">center</property>
     <property name="has_resize_grip">True</property>
     <child>
       <object class="GtkPaned" id="panel">
